<resources>

    <string name="app_name">Bora</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="create_event">Create event</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="place">Place</string>
    <string name="publish_event">Publish</string>
    <string name="time">Time</string>

</resources>
