<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (C) 2015 Roger Silva

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/dark_purple">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Event name field -->
            <EditText
                android:id="@+id/event_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:background="@drawable/edittext_default_bg"
                style="@style/EditTexts.Texts"
                android:maxLength="60"
                android:singleLine="true"/>

            <!-- Event description field -->
            <EditText
                android:id="@+id/event_description_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:background="@drawable/edittext_default_bg"
                style="@style/EditTexts.Texts"
                android:maxLength="200"
                android:lines="4"/>

            <!-- Event place field -->

            <AutoCompleteTextView
                android:id="@+id/event_place_autocompletetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place"
                android:background="@drawable/edittext_default_bg"
                style="@style/EditTexts.Texts" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Event date field -->
                <EditText
                    android:id="@+id/event_date_edittext"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:background="@drawable/edittext_default_bg"
                    style="@style/EditTexts.Texts"/>

                <!-- Event time field -->
                <EditText
                    android:id="@+id/event_time_edittext"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:background="@drawable/edittext_default_bg"
                    style="@style/EditTexts.Texts"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/publish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_default_bg"
        style="@style/Buttons"
        android:text="@string/publish_event"/>

</RelativeLayout>